--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,11 @@ jobs:
     needs: build-backend
     runs-on: ubuntu-latest
     steps:
+      - name: Download built backend Jar
+        uses: actions/download-artifact@master
+        with:
+          name: backend
+          path: backend/app/build/libs/app.jar
       - name: Deploy backend via SSH
         uses: easingthemes/ssh-deploy@main
         with:
