--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,9 @@ jobs:
     name: Build frontend
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Setup node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20.x
       - name: Install
@@ -22,7 +22,7 @@ jobs:
           cmd: install
           dir: frontend
       - name: Build
-        uses: borales/actions-yarn@v4
+        uses: borales/actions-yarn@v5
         with:
           cmd: build
           dir: frontend
@@ -40,7 +40,7 @@ jobs:
       - name: Checkout project sources
         uses: actions/checkout@v3
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/actions/setup-gradle@v3
         with:
           build-root-directory: backend
       - name: Download built frontend
@@ -49,7 +49,7 @@ jobs:
           name: frontend
           path: frontend/dist
       - name: Build Jar
-        run: ./gradlew :app:jar
+        run: ./gradlew :app:shadowJar
         working-directory: backend
       - name: Upload built Jar
         uses: actions/upload-artifact@master
