--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
           cmd: build
           dir: frontend
       - name: Upload built frontend
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v4
         with:
           name: frontend
           path: frontend/dist
@@ -44,7 +44,7 @@ jobs:
         with:
           build-root-directory: backend
       - name: Download built frontend
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v4
         with:
           name: frontend
           path: frontend/dist
@@ -52,7 +52,7 @@ jobs:
         run: ./gradlew :app:shadowJar
         working-directory: backend
       - name: Upload built Jar
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v4
         with:
           name: backend
           path: backend/app/build/libs
@@ -63,7 +63,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download built backend Jar
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v4
         with:
           name: backend
           path: backend/app/build/libs
