--- a/server/settings.gradle
+++ b/server/settings.gradle
@@ -7,6 +7,7 @@ include('libs:eventsourcing:core')
 include('libs:eventsourcing:example')
 include('libs:testing')
 
-include('domains:users')
-include('domains:patterns')
-include('domains:fabrics')
+include('modules:auth')
+include('modules:users')
+include('modules:patterns')
+include('modules:fabrics')
