Preparing http test

--- a/server/app/build.gradle
+++ b/server/app/build.gradle
@@ -4,6 +4,9 @@ plugins {
 }
 
 dependencies {
+    implementation project(':modules:auth')
+
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
