--- a/server/modules/build.gradle
+++ b/server/modules/build.gradle
@@ -7,6 +7,8 @@ subprojects {
         implementation project(':libs:eventsourcing:core')
 
         implementation 'org.springframework.boot:spring-boot-starter'
+        implementation 'org.springframework.boot:spring-boot-starter-webflux'
+        implementation 'org.springframework.boot:spring-boot-starter-security'
         implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 
         testImplementation project(':libs:testing')
