Commenting out basic kleid

--- a/server/modules/build.gradle
+++ b/server/modules/build.gradle
@@ -13,5 +13,6 @@ subprojects {
 
         testImplementation project(':libs:testing')
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testImplementation 'org.springframework.security:spring-security-test'
     }
 }
