--- a/server/libs/testing/build.gradle
+++ b/server/libs/testing/build.gradle
@@ -6,6 +6,7 @@ plugins {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 
     implementation "org.testcontainers:mongodb"
