--- a/server/libs/eventsourcing/build.gradle
+++ b/server/libs/eventsourcing/build.gradle
@@ -1,11 +1,6 @@
 subprojects {
-    apply plugin: 'org.springframework.boot'
-    apply plugin: 'io.spring.dependency-management'
-
     dependencies {
         implementation project(':libs:commons')
-
-        implementation 'org.springframework.boot:spring-boot-starter'
-        implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+        implementation project(':libs:messaging:messaging-core')
     }
 }
