--- a/server/modules/build.gradle
+++ b/server/modules/build.gradle
@@ -1,15 +1,8 @@
 subprojects {
-    apply plugin: 'org.springframework.boot'
-    apply plugin: 'io.spring.dependency-management'
-
     dependencies {
         implementation project(':libs:commons')
-        implementation project(':libs:eventsourcing:core')
-
-        implementation 'org.springframework.boot:spring-boot-starter'
-        implementation 'org.springframework.boot:spring-boot-starter-webflux'
-        implementation 'org.springframework.boot:spring-boot-starter-security'
-        implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+        implementation project(':libs:eventsourcing:eventsourcing-core')
+        implementation project(':libs:messaging:messaging-core')
 
         testImplementation project(':libs:testing')
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
