--- a/server/build.gradle
+++ b/server/build.gradle
@@ -32,6 +32,7 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
         implementation 'org.springframework.boot:spring-boot-starter-security'
         implementation 'org.springframework.boot:spring-boot-starter-webflux'
+        implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
         testImplementation 'io.projectreactor:reactor-test:3.6.5'
         testImplementation("org.assertj:assertj-core:3.25.1")
