--- a/server/libs/messaging/messaging-core/build.gradle
+++ b/server/libs/messaging/messaging-core/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
     implementation project(':libs:commons')
+
+    implementation 'io.projectreactor.rabbitmq:reactor-rabbitmq:1.5.6'
 }
