--- a/server/settings.gradle
+++ b/server/settings.gradle
@@ -5,9 +5,11 @@ include('app')
 include('libs:commons')
 include('libs:eventsourcing:eventsourcing-core')
 include('libs:eventsourcing:eventsourcing-example')
+include('libs:eventsourcing:eventsourcing-testing')
 include('libs:testing')
 include('libs:messaging:messaging-core')
 include('libs:messaging:messaging-example')
+include('libs:messaging:messaging-testing')
 
 include('modules:auth')
 include('modules:users')
