--- a/server/libs/messaging/messaging-core/build.gradle
+++ b/server/libs/messaging/messaging-core/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation project(':libs:commons')
+    implementation project(':libs:persistence:persistence-core')
 
     implementation 'io.projectreactor.rabbitmq:reactor-rabbitmq:1.5.6'
 }
