--- a/server/settings.gradle
+++ b/server/settings.gradle
@@ -24,6 +24,9 @@ include('libs:messaging:messaging-testing')
 include('libs:auth:auth-core')
 include('libs:auth:auth-example')
 
+// Persistence
+include('libs:persistence:persistence-core')
+
 
 /////////////
 // MODULES //
