--- a/server/libs/eventsourcing/build.gradle
+++ b/server/libs/eventsourcing/build.gradle
@@ -2,5 +2,6 @@ subprojects {
     dependencies {
         implementation project(':libs:commons')
         implementation project(':libs:messaging:messaging-core')
+        implementation project(':libs:persistence:persistence-core')
     }
 }
