--- a/server/build.gradle
+++ b/server/build.gradle
@@ -27,6 +27,7 @@ subprojects {
 
     dependencies {
         implementation 'io.projectreactor:reactor-core:3.6.5'
+        implementation 'commons-validator:commons-validator:1.8.0'
 
         implementation 'org.springframework.boot:spring-boot-starter'
         implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
