--- a/server/app/build.gradle
+++ b/server/app/build.gradle
@@ -2,6 +2,7 @@ dependencies {
     implementation project(':libs:auth:auth-core')
 
     implementation project(':modules:credentials:credentials-core')
+    implementation project(':modules:users:users-core')
 
     testImplementation project(':libs:testing')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
