Protecting user creation

--- a/server/modules/build.gradle
+++ b/server/modules/build.gradle
@@ -4,6 +4,7 @@ subprojects {
         implementation project(':libs:persistence:persistence-starter')
         implementation project(':libs:eventsourcing:eventsourcing-starter')
         implementation project(':libs:messaging:messaging-starter')
+        implementation project(':libs:permissions:permissions-starter')
         implementation project(':libs:auth:auth-starter')
 
         testImplementation project(':libs:testing')
