--- a/server/libs/eventsourcing/eventsourcing-example/build.gradle
+++ b/server/libs/eventsourcing/eventsourcing-example/build.gradle
@@ -1,7 +1,6 @@
 dependencies {
     implementation project(':libs:eventsourcing:eventsourcing-starter')
 
-    testImplementation project(':libs:testing')
-
+    testImplementation project(':libs:persistence:persistence-testing')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
