--- a/server/libs/permissions/permissions-example/build.gradle
+++ b/server/libs/permissions/permissions-example/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
     implementation project(':libs:permissions:permissions-starter')
 
-    testImplementation project(':libs:testing')
+    testImplementation project(':libs:persistence:persistence-testing')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
