--- a/server/libs/messaging/messaging-testing/build.gradle
+++ b/server/libs/messaging/messaging-testing/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    implementation project(':libs:testing')
+    implementation project(':libs:persistence:persistence-testing')
     implementation project(':libs:messaging:messaging-starter')
 
     implementation 'org.springframework.boot:spring-boot-starter-test'
