--- a/server/libs/permissions/permissions-starter/build.gradle
+++ b/server/libs/permissions/permissions-starter/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     api project(':libs:permissions:permissions-core')
 
+    implementation project(':libs:messaging:messaging-starter')
     implementation project(':libs:persistence:persistence-starter')
 }
