Finished assets module

--- a/server/features/assets/assets-example/build.gradle
+++ b/server/features/assets/assets-example/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
     implementation project(':features:assets:assets-starter')
+
+    testImplementation 'org.springframework:spring-web'
 }
