--- a/server/app/build.gradle
+++ b/server/app/build.gradle
@@ -20,3 +20,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
+
+bootJar {
+    archiveFileName = 'app.jar'
+}
