--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^17.2.3",
     "@angular/router": "^17.2.3",
     "material-icons": "^1.13.12",
+    "ngx-colors": "^3.6.0",
     "rxjs": "~7.8.0",
     "sse.js": "^2.4.1",
     "tslib": "^2.3.0",
