--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'java-library'
-    id 'org.springframework.boot' version '3.2.4' apply false
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.springframework.boot' version '3.3.2' apply false
+    id 'io.spring.dependency-management' version '1.1.6'
     id 'io.freefair.lombok' version '8.6' apply false
+    id "com.github.ben-manes.versions" version "0.51.0"
 }
 
 subprojects {
@@ -26,8 +27,8 @@ subprojects {
     }
 
     dependencies {
-        implementation 'io.projectreactor:reactor-core:3.6.5'
-        implementation 'commons-validator:commons-validator:1.8.0'
+        implementation 'io.projectreactor:reactor-core:3.6.8'
+        implementation 'commons-validator:commons-validator:1.9.0'
 
         implementation 'org.springframework.boot:spring-boot-starter'
         implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
@@ -35,8 +36,8 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-webflux'
         implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
-        testImplementation 'io.projectreactor:reactor-test:3.6.5'
-        testImplementation("org.assertj:assertj-core:3.25.1")
+        testImplementation 'io.projectreactor:reactor-test:3.6.8'
+        testImplementation("org.assertj:assertj-core:3.26.3")
     }
 
     tasks.named('test') {
