--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "material-icons": "^1.13.12",
     "ngx-colors": "^3.6.0",
     "ngx-infinite-scroll": "^18.0.0",
+    "nxt-sortablejs": "^18.0.0",
     "rxjs": "~7.8.0",
+    "sortablejs": "^1.15.2",
     "sse.js": "2.5.0",
     "tslib": "^2.6.3",
     "zone.js": "~0.14.8"
