--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^18.1.1",
     "@angular/platform-browser-dynamic": "^18.1.1",
     "@angular/router": "^18.1.1",
+    "currency.js": "^2.0.4",
     "material-icons": "^1.13.12",
     "ngx-colors": "^3.6.0",
     "ngx-infinite-scroll": "^18.0.0",
