--- a/server/app/src/main/resources/application.yml
+++ b/server/app/src/main/resources/application.yml
@@ -9,3 +9,7 @@ spring:
     port: 5672
     username: guest
     password: guest
+server:
+  compression:
+    enabled: true
+    min-response-size: 2048
