--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,9 @@
     "material-icons": "^1.13.12",
     "ngx-colors": "^3.6.0",
     "ngx-infinite-scroll": "^18.0.0",
+    "ngx-quill": "^26.0.8",
     "nxt-sortablejs": "^18.0.0",
+    "quill": "^2.0.2",
     "rxjs": "~7.8.0",
     "sortablejs": "^1.15.2",
     "sse.js": "2.5.0",
