--- a/server/app/build.gradle
+++ b/server/app/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation project(':features:fabrics:fabrics-starter')
     implementation project(':features:frontend')
     implementation project(':features:inquiries:inquiries-starter')
+    implementation project(':features:mailbox:mailbox-starter')
     implementation project(':features:patterns:patterns-starter')
     implementation project(':features:topics:topics-starter')
     implementation project(':features:users:users-starter')
