--- a/server/settings.gradle
+++ b/server/settings.gradle
@@ -109,3 +109,8 @@ include('features:inquiries:inquiries-example')
 include('features:mailbox:mailbox-core')
 include('features:mailbox:mailbox-starter')
 include('features:mailbox:mailbox-example')
+
+// Notifications
+include('features:notifications:notifications-core')
+include('features:notifications:notifications-starter')
+include('features:notifications:notifications-example')
