Bootstrapped telegram module

--- a/server/app/build.gradle
+++ b/server/app/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation project(':features:mailbox:mailbox-starter')
     implementation project(':features:notifications:notifications-starter')
     implementation project(':features:patterns:patterns-starter')
+    implementation project(':features:telegram:telegram-starter')
     implementation project(':features:topics:topics-starter')
     implementation project(':features:users:users-starter')
 
