--- a/server/features/telegram/telegram-example/build.gradle
+++ b/server/features/telegram/telegram-example/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    implementation project(':features:telegram:telegram-core')
+    implementation project(':features:telegram:telegram-starter')
 }
