--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,15 +1,13 @@
 plugins {
     id 'java-library'
-    id 'org.springframework.boot' version '3.3.2' apply false
-    id 'io.spring.dependency-management' version '1.1.6'
-    id 'io.freefair.lombok' version '8.10.2' apply false
-    id "com.github.ben-manes.versions" version "0.51.0"
+    id 'org.springframework.boot' version '3.4.1' apply false
+    id 'io.spring.dependency-management' version '1.1.7'
+    id 'com.github.ben-manes.versions' version '0.51.0'
 }
 
 subprojects {
 
     apply plugin: 'java-library'
-    apply plugin: 'io.freefair.lombok'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
 
@@ -27,17 +25,34 @@ subprojects {
     }
 
     dependencies {
-        implementation 'io.projectreactor:reactor-core:3.6.8'
-        implementation 'commons-validator:commons-validator:1.9.0'
+        ////////////
+        // Lombok //
+        ////////////
+        compileOnly 'org.projectlombok:lombok:1.18.36'
+        annotationProcessor 'org.projectlombok:lombok:1.18.36'
+        testCompileOnly 'org.projectlombok:lombok:1.18.36'
+        testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
 
+        /////////////
+        // Reactor //
+        /////////////
+        implementation 'io.projectreactor:reactor-core:3.7.1'
+        testImplementation 'io.projectreactor:reactor-test:3.7.1'
+
+        ////////////
+        // Spring //
+        ////////////
         implementation 'org.springframework.boot:spring-boot-starter'
         implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
         implementation 'org.springframework.boot:spring-boot-starter-security'
         implementation 'org.springframework.boot:spring-boot-starter-webflux'
         implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
-        testImplementation 'io.projectreactor:reactor-test:3.6.8'
-        testImplementation("org.assertj:assertj-core:3.26.3")
+        ///////////
+        // Other //
+        ///////////
+        implementation 'commons-validator:commons-validator:1.9.0'
+        testImplementation("org.assertj:assertj-core:3.27.1")
     }
 
     tasks.named('test') {
