--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,6 +15,11 @@
     "declaration": false,
     "experimentalDecorators": true,
     "moduleResolution": "node",
+    "paths": {
+      "sew-ui": [
+        "./projects/sew-ui/src/public-api"
+      ]
+    },
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
