--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,3 +1,12 @@
 {
-  "printWidth": 120
+  "printWidth": 120,
+  "bracketSameLine": true,
+  "overrides": [
+    {
+      "files": "*.html",
+      "options": {
+        "parser": "angular"
+      }
+    }
+  ]
 }
