--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -133,4 +133,4 @@ jobs:
           REMOTE_PORT: ${{ secrets.SSH_REMOTE_PORT }}
           TARGET: ${{ secrets.SSH_REMOTE_TARGET }}
           SCRIPT_AFTER: |
-            npx pm2 reload Sassycrab
+            /root/.nvm/versions/node/v22.20.0/bin/npx pm2 reload Sassycrab
