--- a/server/features/build.gradle
+++ b/server/features/build.gradle
@@ -15,6 +15,7 @@ subprojects {
         testImplementation project(':libs:eventsourcing:eventsourcing-testing')
 
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testImplementation 'org.springframework.boot:spring-boot-starter-webflux-test'
         testImplementation 'org.springframework.security:spring-security-test'
     }
 }
