--- a/server/libs/messaging/messaging-testing/build.gradle
+++ b/server/libs/messaging/messaging-testing/build.gradle
@@ -3,5 +3,5 @@ dependencies {
     implementation project(':libs:messaging:messaging-starter')
 
     implementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation "org.testcontainers:rabbitmq"
+    implementation "org.testcontainers:testcontainers-rabbitmq"
 }
