--- a/server/features/frontend/build.gradle
+++ b/server/features/frontend/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'kicherkrabbe.java-conventions'
+}
+
 processResources {
     from('../../../frontend/dist/frontend/browser') {
         into 'public'
