--- a/server/features/telegram/telegram-example/build.gradle
+++ b/server/features/telegram/telegram-example/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'kicherkrabbe.feature-conventions'
+}
+
 dependencies {
     implementation project(':features:telegram:telegram-starter')
 }
