--- a/server/libs/auth/auth-core/build.gradle
+++ b/server/libs/auth/auth-core/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'kicherkrabbe.library-conventions'
+}
+
 dependencies {
     implementation 'org.springframework.security:spring-security-crypto:6.4.2'
     implementation 'org.bouncycastle:bcpkix-jdk18on:1.79'
