--- a/server/libs/changes/changes-example/build.gradle
+++ b/server/libs/changes/changes-example/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'kicherkrabbe.library-conventions'
+}
+
 dependencies {
     implementation project(':libs:changes:changes-starter')
 
