--- a/server/libs/eventsourcing/eventsourcing-starter/build.gradle
+++ b/server/libs/eventsourcing/eventsourcing-starter/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'kicherkrabbe.library-conventions'
+}
+
 dependencies {
     api project(':libs:eventsourcing:eventsourcing-core')
     api project(':libs:messaging:messaging-starter')
