--- a/server/libs/messaging/messaging-example/build.gradle
+++ b/server/libs/messaging/messaging-example/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'kicherkrabbe.library-conventions'
+}
+
 dependencies {
     implementation project(':libs:messaging:messaging-starter')
 
