--- a/server/libs/permissions/permissions-core/build.gradle
+++ b/server/libs/permissions/permissions-core/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'kicherkrabbe.library-conventions'
+}
+
 dependencies {
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
 }
