--- a/server/libs/permissions/permissions-example/build.gradle
+++ b/server/libs/permissions/permissions-example/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'kicherkrabbe.library-conventions'
+}
+
 dependencies {
     implementation project(':libs:permissions:permissions-starter')
 
