--- a/server/libs/testing/build.gradle
+++ b/server/libs/testing/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'kicherkrabbe.java-conventions'
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-test'
 }
