--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,24 +91,45 @@ jobs:
     name: Deploy backend
     needs: build-backend
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Download built backend Jar
         uses: actions/download-artifact@v4
         with:
           name: backend
           path: backend/apps/api/build/libs
-      - name: Deploy backend via SSH
-        uses: easingthemes/ssh-deploy@main
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SOURCE: "backend/apps/api/build/libs/api.jar"
-          ARGS: "-rlgoDzvc -i --delete"
-          REMOTE_HOST: ${{ secrets.SSH_REMOTE_HOST }}
-          REMOTE_USER: ${{ secrets.SSH_REMOTE_USER }}
-          REMOTE_PORT: ${{ secrets.SSH_REMOTE_PORT }}
-          TARGET: ${{ secrets.SSH_REMOTE_TARGET }}
-          SCRIPT_AFTER: |
-            service kicherkrabbe-server restart
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: backend
+          push: true
+          tags: |
+            ghcr.io/bennyboer/kicherkrabbe-server:latest
+            ghcr.io/bennyboer/kicherkrabbe-server:${{ github.sha }}
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.SSH_REMOTE_HOST }}
+          username: ${{ secrets.SSH_REMOTE_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_REMOTE_PORT }}
+          script: |
+            cd /opt/kicherkrabbe
+            docker pull ghcr.io/bennyboer/kicherkrabbe-server:latest
+            set -a && source .env && set +a
+            docker stack deploy -c docker-swarm.yml kicherkrabbe
 
   deploy-customer:
     name: Deploy customer frontend
