Adding redirect from www.kicherkrabbe.com + fixing MongoDB task start

--- a/backend/deploy/docker-swarm.yml
+++ b/backend/deploy/docker-swarm.yml
@@ -41,6 +41,8 @@ services:
     configs:
       - source: mongo-keyfile
         target: /data/configdb/mongo-keyfile
+        uid: '999'
+        gid: '999'
         mode: 0400
     deploy:
       placement:
@@ -124,6 +126,13 @@ services:
         - "traefik.http.routers.app.entrypoints=websecure"
         - "traefik.http.routers.app.tls.certresolver=letsencrypt"
         - "traefik.http.services.app.loadbalancer.server.port=8080"
+        - "traefik.http.routers.app-www.rule=Host(`www.${DOMAIN}`)"
+        - "traefik.http.routers.app-www.entrypoints=websecure"
+        - "traefik.http.routers.app-www.tls.certresolver=letsencrypt"
+        - "traefik.http.routers.app-www.middlewares=www-redirect"
+        - "traefik.http.middlewares.www-redirect.redirectregex.regex=^https://www\\.(.+)"
+        - "traefik.http.middlewares.www-redirect.redirectregex.replacement=https://$${1}"
+        - "traefik.http.middlewares.www-redirect.redirectregex.permanent=true"
       update_config:
         parallelism: 1
         delay: 10s
